[package]
name = "rust-todoist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3.0", features = ["cors"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
tokio = { version = "1", features = ["full"] }
